labor day sales

--- a/app/views/blogs/_body_special_deals.html.erb
+++ b/app/views/blogs/_body_special_deals.html.erb
@@ -1,11 +1,10 @@
-<!-- <div class="filter-node editors_box special_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+<!-- <div class="filter-node editors_box special_box" data-filter='["Category","Store_Name"]'>
+  <a target="_blank" href="Store_url"><img src="Image_url" alt="Store_Name"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="Store_url">Deals_Descripton</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="Store_url">Shop Now</a></div>
 </div> -->
-
 
 <div class="filter-node editors_box special_box" data-filter='["big","amazon"]'>
   <a target="_blank" href="https://amzn.to/2MJAoIz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon"></a>
@@ -37,6 +36,14 @@
     <p><a target="_blank" href="https://bit.ly/2PizTY3">Take 20% off at the Labor Day Sale with code WKND. Ends 8/28-9/2.</a></p>
   </div>
   <div class="btn"><a target="_blank" href="https://bit.ly/2PizTY3">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["big","sears"]'>
+  <a target="_blank" href="https://bit.ly/2PnoExH"><img src="https://i.pinimg.com/originals/5a/90/ca/5a90ca418aa17962c36688c7e915f27f.png" alt="sears"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PnoExH">Loabor Day Sale - Save up to 40% off appliances + free shipping $399+</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PnoExH">Shop Now</a></div>
 </div>
 
 <div class="filter-node editors_box special_box" data-filter='["big fashion","KOHLS"]'>
@@ -207,7 +214,7 @@
   <div class="btn"><a target="_blank" href="https://bit.ly/2L5BX1r">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box special_box" data-filter='["CATEGORIES","LUCKY BRAND JEANS"]'>
+<div class="filter-node editors_box special_box" data-filter='["fashion","LUCKY BRAND JEANS"]'>
   <a target="_blank" href="https://bit.ly/348jf0D"><img src="https://i.pinimg.com/564x/11/2e/59/112e594066a4f83d2f2ab79c3971445c.jpg" alt="LUCKY BRAND JEANS"></a>
   <div class="node-box inner special_inner">
     <p><a target="_blank" href="https://bit.ly/348jf0D">Take 40% off regular priced styles and receive up to 75% off sale styles. Ends 8/28-9/4.</a></p>
@@ -215,35 +222,226 @@
   <div class="btn"><a target="_blank" href="https://bit.ly/348jf0D">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box special_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+<div class="filter-node editors_box special_box" data-filter='["furniture","10grove"]'>
+  <a target="_blank" href="https://bit.ly/2L51YxP"><img src="https://i.pinimg.com/564x/78/c4/d9/78c4d9c2c5052c7b2801d15d5d024d1a.jpg" alt="10grove"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://bit.ly/2L51YxP">Take 10% off their entire duvet covers, and coverlets, with code "LONGWKND." Ends 8/30 - 9/6.</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2L51YxP">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box special_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+<div class="filter-node editors_box special_box" data-filter='["furniture","AllModern"]'>
+  <a target="_blank" href="https://bit.ly/2Prdgk8"><img src="https://i.pinimg.com/originals/8d/09/96/8d0996bf15061b4ee8b1714c96cba352.jpg" alt="AllModern"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://bit.ly/2Prdgk8">Take up to 65% off select Labor Day clearance items, with an extra 25% off with code "GOFORIT" Ends 8/28-9/4.</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2Prdgk8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box special_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+<div class="filter-node editors_box special_box" data-filter='["furniture","allswellhome"]'>
+  <a target="_blank" href="https://bit.ly/2PplBVx"><img src="https://i.pinimg.com/564x/67/a1/71/67a171d30f311a80ec93f3b9aa3320a9.jpg" alt="allswellhome"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://bit.ly/2PplBVx">Take 15% off sitewide with coupon code "LD15," Ends 9/9.</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PplBVx">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box special_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+<div class="filter-node editors_box special_box" data-filter='["furniture","birch lane"]'>
+  <a target="_blank" href="https://bit.ly/34br1qA"><img src="https://i.pinimg.com/564x/2a/30/c1/2a30c126a019303a2b7e6e2564f43557.jpg" alt="birch lane"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://bit.ly/34br1qA">Labor day sale. Extra 25% off on select items + free shipping with code SAVE25</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/34br1qA">Shop Now</a></div>
 </div>
 
+<div class="filter-node editors_box special_box" data-filter='["furniture","blindsgalore Mattress"]'>
+  <a target="_blank" href="https://bit.ly/34bXlti"><img src="https://i.pinimg.com/564x/88/3a/d3/883ad32e52350e3eb1a32efbce17b248.jpg" alt="blindsgalore"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/34bXlti">Take 50% off sitewide, including the Good Housekeeping Blinds and Shades. Ends 9/4.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/34bXlti">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","brooklyn bedding Mattress"]'>
+  <a target="_blank" href="https://bit.ly/2L6IJ6X"><img src="https://i.pinimg.com/564x/0a/d5/b0/0ad5b0860d95902ba47b490856b0a6d7.jpg" alt="brooklyn bedding"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2L6IJ6X">Take 25% off sitewide. Ends 9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2L6IJ6X">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","casper Mattress"]'>
+  <a target="_blank" href="https://bit.ly/2NFtUdf"><img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Casper_Logo.png" alt="casper"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NFtUdf">Take 10% off any order that includes a mattress Ends 9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NFtUdf">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","crane and canopy"]'>
+  <a target="_blank" href="https://bit.ly/2NGOn1A"><img src="https://i.pinimg.com/564x/a8/52/b2/a852b268d2fc0135e3c60f9dc04f123e.jpg" alt="crane and canopy"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NGOn1A">Enjoy up to 60% off luxury bedding, sheets, and home decor Ends 8/29-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NGOn1A">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","dormify"]'>
+  <a target="_blank" href="https://bit.ly/2NFW5ZR"><img src="https://i.pinimg.com/originals/d1/be/52/d1be52f1f5bb3746ff1a560e697f156f.png" alt="dormify"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NFW5ZR">Take 25% off sitewide with code "BYESUMMER" Ends 9/1-9/3.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NFW5ZR">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","framebridge"]'>
+  <a target="_blank" href="https://bit.ly/2NLH6NI"><img src="https://i.pinimg.com/564x/80/07/e4/8007e46e390e00f9c6d858a9d986778a.jpg" alt="framebridge"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NLH6NI">Take 15% off all orders over $50 with code "LABORDAY" Ends 8/30-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NLH6NI">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","frontgate"]'>
+  <a target="_blank" href="https://bit.ly/2PiSiDV"><img src="https://i.pinimg.com/originals/5c/d5/6f/5cd56f7c4788c4b51fc465b056e52739.jpg" alt="frontgate"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PiSiDV">Take 30% off sitewide and extra 40% off clearance Ends 9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PiSiDV">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","gryphonhome"]'>
+  <a target="_blank" href="https://bit.ly/2NJ5UGf"><img src="https://i.pinimg.com/564x/52/8c/94/528c943d0824627cecded4f7eb68ba9b.jpg" alt="gryphonhome"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NJ5UGf">Take 20% off with code "LDSALE19," Ends 9/3.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NJ5UGf">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","Home Depot"]'>
+  <a target="_blank" href="https://bit.ly/2PmbQHD"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/TheHomeDepot.svg/1020px-TheHomeDepot.svg.png" alt="Home Depot"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PmbQHD">Take 40% off select furniture and home decor, 20% off bedding and bath and more.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PmbQHD">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","houzz"]'>
+  <a target="_blank" href="https://bit.ly/346RPIF"><img src="https://i.pinimg.com/originals/88/b0/4a/88b04a799e62c093006add8255d16f1c.jpg" alt="houzz"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/346RPIF">Save up to 75% sitewide. Ends 9/4.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/346RPIF">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","dreamcloudsleep"]'>
+  <a target="_blank" href="https://bit.ly/34buntG"><img src="https://i.pinimg.com/564x/65/88/a7/6588a75b99bbb6f22bb7d0a2dc64a80d.jpg" alt="dreamcloudsleep"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/34buntG">Labor day sale! Take $200 Off Mattress. Ends 9/9.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/34buntG">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","laylasleep mattress"]'>
+  <a target="_blank" href="https://bit.ly/2PkYdIF"><img src="https://i.pinimg.com/564x/19/e4/1b/19e41b9d8f938fb11f542c302289a5f3.jpg" alt="laylasleep"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PkYdIF">Labor Day Sale - $275 DEAL - $125 OFF MATTRESSES + 2 FREE PREMIUM  PILLOWS Ends 9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PkYdIF">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","levelsleep mattress"]'>
+  <a target="_blank" href="https://bit.ly/2NG7Nni"><img src="https://i.pinimg.com/564x/c7/8c/47/c78c47c4745d08bf5140d17135d3ecfe.jpg" alt="levelsleep"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NG7Nni">Take 20% off mattresses and pillows. Ends 9/2-9/9.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NG7Nni">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","luluandgeorgia"]'>
+  <a target="_blank" href="https://bit.ly/2PnExnw"><img src="https://i.pinimg.com/564x/c2/e6/1c/c2e61c4fec762b3960ab91d3830fc724.jpg" alt="luluandgeorgia"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PnExnw">Take 15% off $400+ with code "TAKE15," 20% off $800+ with code "TAKE20," and 35% off... $900+ with code "TAKE25."</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PnExnw">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","mysheetsrock"]'>
+  <a target="_blank" href="https://bit.ly/34c23as"><img src="https://i.pinimg.com/564x/d3/bc/5e/d3bc5eac96884ec1323adb4affc5e6f7.jpg" alt="mysheetsrock"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/34c23as">Take 15% off everything with code "WEEKEND" Ends 8/30-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/34c23as">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","nectarsleep mattress"]'>
+  <a target="_blank" href="https://bit.ly/2NGlpyA"><img src="https://i.pinimg.com/originals/79/dc/76/79dc769bdd06a3adc60ce18fa4172c37.jpg" alt="nectarsleep"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NGlpyA">Labor Day Offer - $100 Off & Get 2momory foam pillows. Ends 9/9.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NGlpyA">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","nestbedding mattress"]'>
+  <a target="_blank" href="https://bit.ly/2NENzKt"><img src="https://i.pinimg.com/564x/e5/4f/71/e54f71c1c6de8597d6995db56f22986c.jpg" alt="nestbedding"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NENzKt">Take $200 off on select mattresses with code "SUMNITEZZZ". Ends 9/9.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NENzKt">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","pier1"]'>
+  <a target="_blank" href="https://bit.ly/2NGRNl0"><img src="https://i.pinimg.com/564x/7b/91/f7/7b91f7aae96ab9acf546d14e79c047c3.jpg" alt="pier1"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NGRNl0">Labor Day Sale - Extra 25% Off with code "LABORDAY" Ends 8/29-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NGRNl0">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","purple mattress"]'>
+  <a target="_blank" href="https://bit.ly/2L6imye"><img src="https://i.pinimg.com/564x/76/2d/5f/762d5fad5f0c98138bb13117c83c18ab.jpg" alt="purple"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2L6imye">Buy a mattress and get two free pillows and free sheets. Ends 9/10.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2L6imye">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","saatchiart"]'>
+  <a target="_blank" href="https://bit.ly/2Pl8ncm"><img src="https://i.pinimg.com/564x/71/9f/80/719f805a398304ff40d68568b49e829b.jpg" alt="saatchiart"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2Pl8ncm">Take 15% off original artwork over $1,000 with code "LABOR15". Ends 8/29-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2Pl8ncm">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","serta"]'>
+  <a target="_blank" href="https://bit.ly/2NGadCo"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Serta.png" alt="serta"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NGadCo">Save up to $900 on select iComfort Mattress set. Ends 9/9.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NGadCo">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","society6"]'>
+  <a target="_blank" href="https://bit.ly/2Pl2hbT"><img src="https://i.pinimg.com/564x/91/88/c0/9188c08cdb22c242f8a1f4dc20cdff2e.jpg" alt="society6"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2Pl2hbT">Take 40% off wall hangings, art prints, tapestries, posters and more. Ends 8/31-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2Pl2hbT">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","tempurpedic"]'>
+  <a target="_blank" href="https://bit.ly/2Pmbil6"><img src="https://i.pinimg.com/564x/9f/8f/18/9f8f183c8fb75b82421ca717ceba7140.jpg" alt="tempurpedic"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2Pmbil6">Save up to $300 on Tempur-Breeze and Tempur-LuxeAdapt mattresses and more. Ends 9/9</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2Pmbil6">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["furniture","wovenlyrugs"]'>
+  <a target="_blank" href="https://bit.ly/2NF3j08"><img src="https://i.pinimg.com/originals/19/6c/fc/196cfc9ab7f24b2947182c564aa3d2c1.png" alt="wovenlyrugs"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NF3j08">Take 20% off select rugs. Ends 9/9.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NF3j08">Shop Now</a></div>
+</div>
