--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -2,6 +2,7 @@
 .special_deals_box h2{margin-bottom:40px;}
 .special_deals_box .editors_pick .editors_box .special_inner p{margin-bottom:10px;}
 .special_deals_box .editors_pick .special_box{height:auto;margin:1%;}
+.special_deals_box .admin_controller{margin-bottom:30px;}
 
 /* Begin Blog Main */
 .blog{font-family: 'Montserrat', sans-serif;}
