--- a/app/views/blogs/_body_special_deals.html.erb
+++ b/app/views/blogs/_body_special_deals.html.erb
@@ -9,7 +9,7 @@
 <div class="filter-node editors_box special_box" data-filter='["big","amazon"]'>
   <a target="_blank" href="https://amzn.to/2MJAoIz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL"></a>This is Description Section</p>
+    <p><a target="_blank" href="MOSTREVIEW_URL"></a>Amazon The best Labor Day Sales 2019 - Site Wide</p>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2MJAoIz">Shop Now</a></div>
 </div>
@@ -44,6 +44,56 @@
     <p><a target="_blank" href="https://bit.ly/2PnoExH">Loabor Day Sale - Save up to 40% off appliances + free shipping $399+</a></p>
   </div>
   <div class="btn"><a target="_blank" href="https://bit.ly/2PnoExH">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["elec","bestbuy"]'>
+  <a target="_blank" href="https://bit.ly/2XqzyGk"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f5/Best_Buy_Logo.svg" alt="bestbuy"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2XqzyGk">Labor Day Sale!! Save up to 40% on appliance top deals. Ends 9/11.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2XqzyGk">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["elec","hp"]'>
+  <a target="_blank" href="https://bit.ly/2Le8XEV"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/HP_logo_2012.svg/768px-HP_logo_2012.svg.png" alt="hp"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2Le8XEV">Labor Day Sale!! Save up to 61% on select products, plus get free shipping.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2Le8XEV">Shop Now</a></div>
+</div>
+
+<!-- You have to change this viglink adress later -->
+<div class="filter-node editors_box special_box" data-filter='["elec","Dell"]'>
+  <a target="_blank" href="https://bit.ly/32UfivZ"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Dell_Logo.svg/1024px-Dell_Logo.svg.png" alt="Dell"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/32UfivZ">Labor Day Sale 2019 | Laptop, Desktop & Electronics Deals</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/32UfivZ">Shop Now</a></div>
+</div>
+
+<!-- You have to change this viglink adress later -->
+<div class="filter-node editors_box special_box" data-filter='["fashion","foot locker"]'>
+  <a target="_blank" href="https://bit.ly/2LaxKte"><img src="https://i.pinimg.com/564x/4d/f6/a9/4df6a9eb60aad2c58479b8e7d05d9047.jpg" alt="foot locker"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2LaxKte">Labor Day 2019 Deals and Sales</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2LaxKte">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["fashion","forever21"]'>
+  <a target="_blank" href="https://bit.ly/2PxhbMq"><img src="https://i.pinimg.com/564x/80/87/16/808716784b9da7018eff62d8e46d85c0.jpg" alt="forever21"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PxhbMq">Kick up an additional 60% off all clearance and sale items with code ADD2CART. Ends 9/3.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PxhbMq">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["fashion","JCPenney"]'>
+  <a target="_blank" href="https://bit.ly/2NDkOOp"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/JCPenney_logo.svg/1280px-JCPenney_logo.svg.png" alt="JCPenney"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2NDkOOp">Labor Day Sale 40- 60% Off on select items Ends 8/29-9/2.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2NDkOOp">Shop Now</a></div>
 </div>
 
 <div class="filter-node editors_box special_box" data-filter='["big fashion","KOHLS"]'>
