--- a/app/views/blogs/_navbar_special_deals_m.html.erb
+++ b/app/views/blogs/_navbar_special_deals_m.html.erb
@@ -10,6 +10,7 @@
         <li><button class="filter-button btn btn-md white-text rev_index" data-filter="big">The Big Retailers</button></li>
         <li><button class="filter-button btn btn-md rev_index" data-filter="fashion">Beauty & Fashion</button></li>
         <li><button class="filter-button btn btn-md rev_index" data-filter="furniture">Furniture & Décor</button></li>
+        <li><button class="filter-button btn btn-md rev_index" data-filter="elec">Electronics</button></li>
        </div>
       </ul>
     </nav>
