--- a/app/views/blogs/labordeals.html.erb
+++ b/app/views/blogs/labordeals.html.erb
@@ -4,7 +4,7 @@
   
   <div class="special_deals_box">
     <div class="promotions editors_pick common_layout most_wrapper clearfix">
-      <h2>Most-Reviewed Products On Amazon</h2> 
+      <h2 class="special_title">The best Labor Day deals of 2019</h2> 
       <%= render 'blogs/navbar_special_deals' %>
       <div class="nav_most_m"><%= render 'blogs/navbar_special_deals_m' %></div>
       <div class="filter-group guide_wrap ">
