--- a/app/views/blogs/_navbar_special_deals.html.erb
+++ b/app/views/blogs/_navbar_special_deals.html.erb
@@ -6,8 +6,8 @@
       <button class="filter-button btn btn-md white-text rev_index" data-filter="big">The Big Retailers</button>
       <button class="filter-button btn btn-md rev_index" data-filter="fashion">Beauty & Fashion</button>
       <button class="filter-button btn btn-md rev_index" data-filter="furniture">Furniture & Décor</button>
-      <!-- <button class="filter-button btn btn-md rev_index" data-filter="beauty">Beauty & Fashion</button>
-      <button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button> -->
+      <button class="filter-button btn btn-md rev_index" data-filter="elec">Electronics</button>
+      <!-- <button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button> -->
       <input type="text" class="form-control" placeholder="Search here...">
     </div>
   </div>
