--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,114 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="11.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZAq3ob"><img src="https://m.media-amazon.com/images/I/71e1P0UvTOL._SR400,400_.jpg" alt="S-ZONE 17inch Carry on Lightweight Small Weekender Duffel Bag Travel" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZAq3ob">S-ZONE 17inch Carry on Lightweight Small Weekender Duffel Bag Travel Size Sports Durable Gym Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span></address>
+      <textarea readonly="readonly" class="code_area">50SN3LKJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $22.99</strong> with promo code: <strong class="m_codes">50SN3LKJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 07, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZAq3ob">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="6.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZBuWcM"><img src="https://m.media-amazon.com/images/I/61IgIl4W5JL._SR400,400_.jpg" alt="Copper Grill Mat" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZBuWcM">Copper Grill Mat and Bake Mat Set of 5 Non Stick BBQ Grill & Baking Mats - Reusable, Easy to Clean - PTFE Teflon Fiber...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.49</span><span class="ori_price">$12.97</span></address>
+      <textarea readonly="readonly" class="code_area">50EMV2SZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $12.97</strong> with promo code: <strong class="m_codes">50EMV2SZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 03, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZBuWcM">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="16.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ljf2Pc"><img src="https://m.media-amazon.com/images/I/61hhYy8PCGL._SR400,400_.jpg" alt="Gaming Headset for PS4..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ljf2Pc">Gaming Headset for PS4, Xbox One, PC, Gaming Headphones with 7.1 Stereo Surround Sound, Updated Noise Cancelling Mic, with Mute...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.79</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">308ZH4XM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $23.99</strong> with promo code: <strong class="m_codes">308ZH4XM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 28, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Ljf2Pc">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZG0T3M"><img src="https://m.media-amazon.com/images/I/61PVCCWYZ7L._SR400,400_.jpg" alt="Beiens 10-Inch LCD Writing Tablet Digital Board" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZG0T3M">Beiens 10-Inch LCD Writing Tablet Digital Board for Painting, Drawing Tablet - Can Be Used as Office Whiteboard...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">50WOH4GC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $24.99</strong> with promo code: <strong class="m_codes">50WOH4GC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 02, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZG0T3M">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="41.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/34hJtxA"><img src="https://m.media-amazon.com/images/I/819H-Ckm+kL._SR400,400_.jpg" alt="zociko Food Dehydrator Machine" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/34hJtxA">zociko Food Dehydrator Machine, Food Dehydrator Dehydrated Dog Food Dryer for Jerky/Meat/Beef/Fruit/Vegetable Electric...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.99</span><span class="ori_price">$59.99</span></address>
+      <textarea readonly="readonly" class="code_area">305WFFZV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $59.99</strong> with promo code: <strong class="m_codes">305WFFZV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/34hJtxA">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="15" data-price="17.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zJ7lw0"><img src="https://m.media-amazon.com/images/I/81UrVIXI1YL._SR400,400_.jpg" alt="Star Coffee Container Airtight Coffee Storage" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zJ7lw0">Star Coffee Container Airtight Coffee Storage - Stainless Steel Canister with Scoop for Beans and Ground Coffee,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.84</span><span class="ori_price">$20.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">15HK3ADS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $20.99</strong> with promo code: <strong class="m_codes">15HK3ADS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 29, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zJ7lw0">Use Code at Amazon</a></div>
+</div>
+  
 <div class="card clearfix" data-score="35" data-price="12.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2UhRnmj"><img src="https://m.media-amazon.com/images/I/51RNWx6d7aL._SR400,400_.jpg" alt="Calogy Battery Operated Soap Dispenser" /></a>
