--- a/app/views/blogs/_body_special_deals.html.erb
+++ b/app/views/blogs/_body_special_deals.html.erb
@@ -6,6 +6,46 @@
   <div class="btn"><a target="_blank" href="Store_url">Shop Now</a></div>
 </div> -->
 
+<div class="filter-node editors_box special_box" data-filter='["fashion","ralphlauren"]'>
+  <a target="_blank" href="https://bit.ly/34hyzrG"><img src="https://i.pinimg.com/564x/3d/49/28/3d4928ed1a81c72eedf678d42335325f.jpg" alt="ralphlauren"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/34hyzrG">Take 30% off when you spend $150 or more on select itmes with code LABORDAY Ends 9/3.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/34hyzrG">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["fashion","Champion"]'>
+  <a target="_blank" href="https://bit.ly/2PyATY9"><img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Champion_Usa_logo.png" alt="Champion"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2PyATY9">Get extra 30% Off Clearance With Code BYESUMMER. Ends 9/4.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2PyATY9">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["fashion","adidas"]'>
+  <a target="_blank" href="https://bit.ly/348c4Wa"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Adidas_Logo.svg/1280px-Adidas_Logo.svg.png" alt="adidas"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/348c4Wa">Get 30% off full price and sale items, with promo code SPORT30 Ends 9/3.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/348c4Wa">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["fashion","farfetch"]'>
+  <a target="_blank" href="https://www.farfetch.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Farfetch_master_logo_black.png" alt="farfetch"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://www.farfetch.com/">The 30% discount offer is valid on sale items only with code FX30.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://www.farfetch.com/">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box special_box" data-filter='["fashion","reebok"]'>
+  <a target="_blank" href="https://bit.ly/34bCvu5"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Reebok_logo.svg/1280px-Reebok_logo.svg.png" alt="reebok"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/34bCvu5">Go big with huge Labor Day savings. Get 20% - 40% off.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/34bCvu5">Shop Now</a></div>
+</div>
+
 <div class="filter-node editors_box special_box" data-filter='["big","amazon"]'>
   <a target="_blank" href="https://amzn.to/2MJAoIz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon"></a>
   <div class="node-box inner special_inner">
